# ProjectSummarizer

./: .env.template  .gitignore  README.MD  README.md  ignore_helper.py  pyproject.toml  readme.MD  summarize.py  tree_stats.py
old/scripts/: summarize.py
old/src/projectsummarizer/: __init__.py  constants.py
old/src/projectsummarizer/core/: tree.py
old/tests/: test_tree.py
old/tests/sample_project/: README.md
old/tests/sample_project/src/: main.py
ps_core/: __init__.py  analysis.py  tokens.py  tree.py
scripts/: ignore_helper.py  list_tokenization_models.py  show_tree.py  simple_stats.py  stats.py  summarize.py  tree_stats.py
src/projectsummarizer/: __init__.py  call_logger.py  engine.py
src/projectsummarizer/cli/: __init__.py  args.py
src/projectsummarizer/contents/: __init__.py
src/projectsummarizer/contents/formatters/: __init__.py  base.py  base_streaming.py  markdown_formatter.py  streaming.py  text.py  text_formatter.py  text_streaming.py  xml_formatter.py
src/projectsummarizer/contents/readers/: __init__.py  base.py  binary.py  notebook.py  (+1 more)
src/projectsummarizer/core/: __init__.py  ignore.py  left_patterns.py  tokens.py  tree.py
src/projectsummarizer/plotting/: __init__.py  tree_plotter.py
src/projectsummarizer/tokens/: __init__.py  anthropic.py  counter.py  google.py  openai.py  primitive.py
tests/: conftest.py  test_analysis.py  test_file_discoverer.py  test_ignore.py  test_summarize_smoke.py  test_tree.py
tests/integration/: test_summarize_snapshots.py
tests/resources/snapshots/: test_project.markdown  test_project.text  test_project.xml
tests/sample_project/: .gitignore
tests/test_project/: file_1.txt  file_2.txt
tests/test_project/folder_2/: file_4.txt
tests/unit/: test_formatters.py
token_handlers/: anthropic_token_handler.py  openai_token_handler.py
(+17 files in other folders)
