[tool.poetry]
name = "projectsummarizer"
version = "0.1.0"
description = ""
authors = ["e_mamul <eugene@pufin.id>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
nbformat = "^5.10.4"
tiktoken = "^0.8.0"
anthropic = "^0.45.2"
python-dotenv = "^1.0.1"


[tool.poetry.dev-dependencies]
pytest = "^8.3.0"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
